tests: Migrate to assertj